--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Latihan Git</title>
 </head>
 <body>
-    <h1>Contoh Latihan Git</h1>
+    <h1>Test update pada index.html</h1>
 </body>
 </html>
